cmake_minimum_required(VERSION 3.20)
project(ex1_unionFind)

set(CMAKE_CXX_STANDARD 14)

add_executable(C1_cityRoad C1_cityRoad.cpp)
add_executable(C2_friendsTable C2_friendsTable.cpp)
add_executable(H1_maze H1_maze.cpp)
add_executable(H2_isTree H2_isTree.cpp)
add_executable(H3_cityRoadLen H3_cityRoadLen.cpp)
add_executable(H4_netWork H4_netWork.cpp)
add_executable(H5_theBugLife H5_theBugLife.cpp)
add_executable(test test.cpp)
