cmake_minimum_required(VERSION 3.20)
project(ex2_stack_queue)

set(CMAKE_CXX_STANDARD 14)

add_executable(rail C1_rail.cpp)
add_executable(C2_AcBoy C2_AcBoy.cpp)
add_executable(C3_doctor C3_doctor.cpp)
add_executable(H1_megQueue H1_megQueue.cpp)
add_executable(H2_bracket H2_bracket.cpp)
add_executable(H3_calculator H3_calculator.cpp)
add_executable(H4_stack_queue H4_stack_queue.cpp)
add_executable(H5_catalan H5_catalan.cpp)
