cmake_minimum_required(VERSION 3.20)
project(ex4)

set(CMAKE_CXX_STANDARD 14)

add_executable(fenceRepair C1_fenceRepair.cpp)
add_executable(surroundTree C1_surroundTree.cpp)
add_executable(entropy C3_entropy.cpp)
add_executable(greatNumber H1_greatNumber.cpp)
add_executable(wall H3_wall.cpp)
add_executable(cows H2_cows.cpp)
add_executable(forest H4_forest.cpp)
add_executable(mergeArr H5_mergeArr.cpp)
add_executable(test 二进制枚举.cpp)
