cmake_minimum_required(VERSION 3.20)
project(ex7_String)

set(CMAKE_CXX_STANDARD 14)

add_executable(C1_DNA_sorting C1_DNA_sorting.cpp)
add_executable(testDNA testDNA.cpp)
add_executable(C2_statistic C2_statistic.cpp)
add_executable(test test.cpp)
add_executable(C3_shortest_perfixes C3_shortest_perfixes.cpp)
add_executable(H1_rank H1_rank.cpp)
add_executable(H2_solveOrder H2_solveOrder.cpp)
add_executable(H3_hat_words H3_hat_words.cpp)
add_executable(H4_phoneList H4_phoneList.cpp)
add_executable(testCin_getline testCin_getline.cpp)
add_executable(testHatWords testHatWords.cpp)

