cmake_minimum_required(VERSION 3.20)
project(ex8_review)

set(CMAKE_CXX_STANDARD 14)

add_executable(C1_relation C1_relation.cpp test.cpp)
add_executable(C2_braket C2_braket.cpp)
add_executable(C3_reLoad C3_reLoad.cpp)
add_executable(C4_middle C4_middle.cpp)
add_executable(c5_road c5_road.cpp)
add_executable(C6_AB_pair C6_AB_pair.cpp)
add_executable(C7_wordSum C7_wordSum.cpp)
add_executable(H1_fix H1_fix.cpp)
add_executable(H2_bag H2_bag.cpp)
add_executable(H3_substr H3_substr.cpp)
add_executable(H4_string H4_string.cpp)
add_executable(H5_mergeNumber H5_mergeNumber.cpp)
add_executable(H6_k H6_k.cpp)
add_executable(H7_busRoad H7_busRoad.cpp)
add_executable(H8_unRepNum H8_unRepNum.cpp)
